--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html lang="en-us">
 
 <head>
-    <meta charset="UTF-8" />
-    <link  rel="stylesheet" href="./images/style.css">
+    <meta charset="UTF-8">
     <title>Horiseon Digital Marketing</title>
+    <link  rel="stylesheet" href="./images/style.css">
+    
 </head>
 
 <!--main content filling-->
 <body>
-    <header class="header">
+    <header>
+    <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <section>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -23,64 +25,70 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </section>
+        </nav>
     </header>
-    <!--Images sources-->
-    <section class="hero"></section>
-    <section class="content">
-        <article>
-        <section class="search-engine-optimization">
-            <img src="./images/search-engine-optimization.jpg" alt="search engine graphic" class="float-left" />
+    <figure class="hero" role="img" arial-label="meeting photo">
+</figure>
+
+    <!--Section for Images sources-->
+    <main>
+    <section id="search-engine-optimization" class="content">
+            <img src="./images/search-engine-optimization.jpg" alt="search engine graphic" class="float-left">
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
-        <section id="online-reputation-management" class="online-reputation-management">
-            <img src="./images/online-reputation-management.jpg" alt="laptop and phone image" class="float-right topset" />
+        <section id="online-reputation-management" class="content">
+            <img src="./images/online-reputation-management.jpg" alt="laptop and phone image" class="float-right topset">
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section id="social-media-marketing" class="social-media-marketing">
-            <img src="./images/social-media-marketing.jpg" alt="social media meeting" class="float-left" />
+        <section id="social-media-marketing" class="content">
+            <img src="./images/social-media-marketing.jpg" alt="social media meeting" class="float-left">
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </section>
     </section>
+</main>
+
     <aside class="benefits">
-        <section class="benefit-lead">
+        <div class="benefit">
             <h3>Lead Generation</h3>
-            <img src="./images/lead-generation.png" alt="money funnel icon" />
+            <img src="./images/lead-generation.png" alt="money funnel icon">
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </section>
-        <section class="benefit-brand">
+        </div>
+        <div class="benefit">
             <h3>Brand Awareness</h3>
-            <img src="./images/brand-awareness.png" alt="lightbulb head icon" />
+            <img src="./images/brand-awareness.png" alt="lightbulb head icon">
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </section>
-        <section class="benefit-cost">
+        </div>
+        <div class="benefit">
             <h3>Cost Management</h3>
-            <img src="./images/cost-management.png" alt="tool and change icon" />
+            <img src="./images/cost-management.png" alt="tool and change icon">
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </section>
+        </div>
     </aside>
     <!--end of content filling^^^-->
 
-    <footer class="footer">
+    <!--added footer-->
+    <footer>
+    <div class="footer">
         <h3>Made with ❤️️ by Horiseon</h3>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
+    </div>
     </footer>
 </body>
 
